<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<common.version>0.58</common.version>
		<flowtree.version>0.16</flowtree.version>

		<grpc.version>1.53.0</grpc.version>
		<protobuf.version>3.21.7</protobuf.version>
		<protoc.version>3.21.7</protoc.version>
	</properties>

	<groupId>com.almostrealism</groupId>
	<artifactId>Rings</artifactId>
	<version>0.29</version>

	<modules>
		<module>audio</module>
		<module>raytracer</module>
		<module>engine</module>
		<module>gl</module>
		<module>shading</module>
		<module>primitives</module>
		<module>network</module>
		<module>absorption</module>
		<module>photonfield</module>
		<module>replicate</module>
		<module>tensorflow</module>
		<module>torch</module>
		<module>keyframing</module>
		<module>remote</module>
		<module>remote-server</module>
	</modules>

	<!-- Output to jar format -->
	<packaging>pom</packaging>
	
	<dependencies>
		<dependency>
			<groupId>io.flowtree</groupId>
			<artifactId>ar-treeview</artifactId>
			<version>${flowtree.version}</version>
		</dependency>

		<dependency>
			<groupId>io.flowtree</groupId>
			<artifactId>ar-graphpersist</artifactId>
			<version>${flowtree.version}</version>
		</dependency>
		
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.joml</groupId>
			<artifactId>joml</artifactId>
			<version>1.9.9</version>
		</dependency>

	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-bom</artifactId>
				<version>${grpc.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<repository>
			<id>central</id>
			<url>https://almostrealism.jfrog.io/artifactory/default-libs-release</url>
		</repository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>central</id>
			<url>https://almostrealism.jfrog.io/artifactory/default-libs-release</url>
			<releases><enabled>true</enabled></releases>
			<snapshots><enabled>true</enabled></snapshots>
		</repository>
	</repositories>
</project>
